# awm

./: .gitignore  pyproject.toml
data/: test.py
data/results/: ellipse.csv  rectangle.csv
dev/: main.py
dev/awm/: awm.py  core_awm.py  draft_awm.py
dev/dgp/: diagnal.py  ellipse.py  hte.py
dev/estimation/: estimators.py
dev/milp/: big_m.py  discretize.py  linear_threshold.py  sandbox.py  sandbox_two.py
dev/monte_carlo/: ellipse.py  square.py
utils/: visualization.py
