[project]
name = "awm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pulp>=3.2.1",
    "scikit-learn>=1.7.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
    "ucimlrepo>=0.0.7",
]
